@@ -17248,7 +17248,7 @@ WARNING: Reducing the number of allowed processors too much will degrade perform
         </child>
         <child>
           <object class="GtkScrolledWindow" id="scrolledwindow6">
-            <property name="height-request">350</property>
+            <property name="height-request">370</property>
             <property name="visible">True</property>
             <property name="can-focus">False</property>
             <property name="hscrollbar-policy">never</property>
