@@ -5,6 +5,7 @@ xx/xx/xx
 * Fixed FWHM units and star center position in Dynamic PSF
 * Fixed bug in ECC algorithm
 * New candidates star detection algorithm to improve speed and accuracy
+* New SNR estimator in photometry analysis
 
 siril 0.99.10.1
 06/23/21
